# larql

./: Cargo.toml  Makefile  README.md  ROADMAP.md
crates/larql-server/: Cargo.toml  README.md  ROADMAP.md  coverage-policy.json
crates/larql-server/docs/: server-spec.md
crates/larql-server/examples/: bench_expert_server.rs  openai_demo.rs  server_bench.rs  server_demo.rs
crates/larql-server/src/: announce.rs  bootstrap.rs  embed_store.rs  error.rs  grpc_expert.rs  lib.rs  main.rs  openapi.rs  session.rs  state.rs
crates/larql-server/src/routes/: describe.rs  expert.rs  mod.rs  openai_chat.rs  openai_completions.rs  openai_embeddings.rs  patches.rs  relations.rs  select.rs  stream.rs  walk.rs  walk_ffn.rs
crates/larql-server/src/routes/expert/: mod.rs  multi_layer_batch.rs
crates/larql-server/src/routes/openai/: chat.rs  completions.rs  embeddings.rs
crates/larql-server/tests/: test_api.rs  test_expert_endpoint.rs  test_http_embed.rs  test_http_full_routes.rs  test_unit_band_utils.rs  test_unit_state.rs
crates/larql-server/tests/common/: mod.rs
crates/larql-vindex/: CHANGELOG.md  Cargo.toml  PERFORMANCE.md  README.md  ROADMAP.md  coverage-policy.json
crates/larql-vindex/benches/: cpu_vs_gpu.rs  extract_throughput.rs  vindex_storage_dispatch.rs
crates/larql-vindex/examples/: demo_features.rs  vindex_bench.rs  vindex_demo.rs
crates/larql-vindex/src/: config.rs  error.rs  lib.rs  load.rs  mutate.rs
crates/larql-vindex/src/config/: compliance.rs  model.rs  quantization.rs
crates/larql-vindex/src/extract/: build.rs  build_helpers.rs  moe_svd.rs  streaming.rs
crates/larql-vindex/src/format/: checksums.rs  down_meta.rs  fp4_codec.rs  load.rs
crates/larql-vindex/src/format/huggingface/: download.rs  mod.rs  publish.rs
crates/larql-vindex/src/format/weights/: load.rs  manifest.rs  mod.rs  ple_sidecar.rs  write_f32.rs
crates/larql-vindex/src/index/: core.rs  gate_trait.rs  mod.rs  mutate.rs
crates/larql-vindex/src/index/compute/: gate_knn.rs  q4k_dispatch.rs
crates/larql-vindex/src/index/core/: mod.rs
crates/larql-vindex/src/index/mutate/: loaders.rs  mod.rs
crates/larql-vindex/src/patch/: core.rs  format.rs  overlay.rs  overlay_apply.rs
crates/larql-vindex/src/quant/: convert.rs
crates/larql-vindex/src/storage/: engine.rs  mod.rs
crates/larql-vindex/tests/: golden_resume.rs  test_streaming_stages_moe.rs  test_vindex.rs  test_walker_accuracy.rs
(+300 files in other folders)
