[workspace]
resolver = "2"
members = [
    "crates/larql-models",
    "crates/larql-core",
    "crates/larql-inference",
    "crates/larql-lql",
    "crates/larql-surreal",
    "crates/larql-cli",
    "crates/larql-python",
]
default-members = [
    "crates/larql-models",
    "crates/larql-core",
    "crates/larql-inference",
    "crates/larql-lql",
    "crates/larql-surreal",
    "crates/larql-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Chris Hay <chrishayuk@googlemail.com>"]
license = "Apache-2.0"
repository = "https://github.com/chrishayuk/chuk-larql-rs"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
