[package]
name = "larql-vindex"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Vindex — the queryable model format. Storage, KNN index, build, load, mutate."
keywords = ["transformer", "vindex", "knn", "interpretability"]
categories = ["science"]

[dependencies]
larql-models = { path = "../larql-models" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

# Matrix ops (BLAS-accelerated)
ndarray = { version = "0.16", features = ["blas"] }
blas-src = { version = "0.10", features = ["accelerate"] }

# Tokenizer (for embeddings loading + token resolution)
tokenizers = "0.21"

# Checksums
sha2 = "0.10"
